# roboquest_addons

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: tags_36h11.yaml
launch/: april_tag.launch.yml  autonomy_demo.launch.py
roboquest_addons/: MLX90614.py  MLX90614_node.py  VL53L0Xsimple.py  navigator.py
rpi-image-gen/rq-lidar-april/: README.md
rpi-image-gen/rq-lidar-april/config/: rq-lidar-april.yaml
rpi-image-gen/rq-lidar-april/device/rpi4/: config.txt  device.yaml
rpi-image-gen/rq-lidar-april/image/rq-partitions/: genimage.cfg.in.ext4  pre-image.sh  rq-partitions.yaml  setup.sh
rpi-image-gen/rq-lidar-april/image/rq-partitions/bdebstrap/: customize10-pmap  customize30-configure
rpi-image-gen/rq-lidar-april/image/rq-partitions/device/: provisionmap-clear.json
scripts/: april_demo.py  autonomy_demo.sh  build_images.sh  dstart.sh  navigator.py  param_test.py  start.sh  static_robot_tf2_broadcaster.py  usb_power_control.py
tags/: README
urdf/: rq_tracked.urdf
