<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboquest_addons</name>
  <version>0.1.0</version>
  <description>RoboQuest components outside the base functionality</description>
  <maintainer email="bill@manialabs.us">Bill Mania</maintainer>
  <license>Proprietary</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
